	PR c++/77339 - ICE with invalid use of alias template.

* pt.c (lookup_template_class_1): Don't try to enter the scope of an
	alias template.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@246462 138bc75d-0d04-0410-961f-82ee72b054a4